# 26-python-advanced-1-

./: .gitignore  main.py  pyproject.toml
data/new/: imported.md  test.md
note_app/: app.py  cli.py
note_app/config/: config.py
note_app/domain/: __init__.py  folder.py  note.py
note_app/repositories/: __init__.py  base_folder_repository.py  base_note_repository.py  folder_repository.py  note_repository.py
note_app/screens/: import_modal.py  main.py
note_app/widgets/: __init__.py  file_tree.py  markdown.py  note_view.py
scripts/: lint.py
