[project]
name = "note_app"
version = "0.1.0"
description = ""
authors = [
    {name = "Alaricode",email = "antonlarichev@gmail.com"}
]
requires-python = ">=3.10,<4.0"
dependencies = [
    "textual (>=6.6.0,<7.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)",
    "ruff (>=0.14.6,<0.15.0)"
]

[tool.poetry.scripts]
app = "note_app.cli:run"
lint = "scripts.lint:run"
